--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 
 <head>
     <title>Population Simulation</title>
+    <meta name="description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://population-simulation.zohan.tech">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Population Simulation">
+    <meta property="og:description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/7212/7212405.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="population-simulation.zohan.tech">
+    <meta property="twitter:url" content="https://population-simulation.zohan.tech">
+    <meta name="twitter:title" content="Population Simulation">
+    <meta name="twitter:description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+    <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/7212/7212405.png">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 </head>
 
 <body>
@@ -103,4 +121,5 @@
 </body>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="bundle.js"></script>
+
 </html>
