--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <head>
     <title>Population Simulation</title>
-    <meta name="description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+    <meta name="description"
+        content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://population-simulation.zohan.tech">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Population Simulation">
-    <meta property="og:description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+    <meta property="og:description"
+        content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
     <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/7212/7212405.png">
 
     <!-- Twitter Meta Tags -->
@@ -16,7 +18,8 @@
     <meta property="twitter:domain" content="population-simulation.zohan.tech">
     <meta property="twitter:url" content="https://population-simulation.zohan.tech">
     <meta name="twitter:title" content="Population Simulation">
-    <meta name="twitter:description" content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
+    <meta name="twitter:description"
+        content="A website that runs population (genetics) simulations based on Hardy-Weinberg principles">
     <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/7212/7212405.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
@@ -25,7 +28,11 @@
 <body>
     <div class="w3-card-4">
         <div class="w3-container w3-green">
-            <h2 style="text-align: center;">Population Simulation</h2>
+            <h2 style="text-align: center;">Population Simulation<br>
+                <a style="text-align: center;" href="https://github.com/Zo-Bro-23/view-count-badge">
+                    <img alt="view-count-badge title=" Website Views"
+                        src="https://view-count-badge.zohan.tech/Zo-Bro-23/population-simulation?color=6b105d&labelColor=913e96&style=for-the-badge&logo=eye&label=VISITORS&logoColor=white" /></a>
+            </h2>
         </div>
         <br>
         <form class="w3-container" style="text-align: center; margin-left: 25%; margin-right: 25%;">
