--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
             <br>
         </form>
         <form class="w3-container" style="text-align: center; margin-left: 25%; margin-right: 25%;">
+            <label>Generation log type:</label>
+            <br>
+        </form>
+        <form class="w3-container" style="text-align: center; margin-left: 43%; margin-right: 43%;">
+            <select class="w3-select" name="option" id="log">
+                <option value="0">No log</option>
+                <option value="5">Short</option>
+                <option value="2">Detailed</option>
+                <option value="1">Verbose</option>
+            </select>
+            <br>
+        </form>
+        <form class="w3-container" style="text-align: center; margin-left: 25%; margin-right: 25%;">
             <button id="button" type="button" class="w3-btn w3-padding w3-blue" style="width:120px">Run
                 &nbsp;></button>
             <button id="cleartext" type="button" class="w3-btn w3-padding w3-teal" style="width: 120px">Clear
